Update input placeholder and enhance IP/domain resolution in worker

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
         </header>
 
         <div class="search-box">
-            <input type="text" id="ip-input" placeholder="Wpisz adres IP (np. 8.8.8.8) lub zostaw puste dla swojego IP">
+            <input type="text" id="ip-input" placeholder="Wpisz adres IP lub domenę (np. google.com)">
             <button id="search-btn">Szukaj</button>
         </div>
 
