--- a/public/index.html
+++ b/public/index.html
@@ -1,82 +1,131 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IP Lookup - Odpowiednik nslookup.io</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-     crossorigin=""/>
+    <title>IP & DNS Analyzer</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                    colors: {
+                        slate: {
+                            850: '#1e293b', // Custom darker slate
+                        }
+                    }
+                }
+            }
+        }
+    </script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <style>
+        /* Custom scrollbar for tables if needed */
+        ::-webkit-scrollbar {
+            width: 8px;
+            height: 8px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #0f172a;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #334155;
+            border-radius: 4px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #475569;
+        }
+    </style>
 </head>
-<body>
+<body class="bg-slate-900 text-slate-100 min-h-screen font-sans selection:bg-sky-500 selection:text-white">
 
-    <div class="container">
-        <header>
-            <h1>IP Lookup Tool</h1>
-            <p>Sprawdź informacje o adresie IP i jego lokalizację.</p>
-        </header>
+    <!-- Navbar -->
+    <nav class="border-b border-slate-700 bg-slate-800/50 backdrop-blur-md sticky top-0 z-50">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center">
+            <h1 class="text-xl font-bold bg-gradient-to-r from-sky-400 to-blue-500 bg-clip-text text-transparent">
+                IP & DNS Analyzer
+            </h1>
+        </div>
+    </nav>
 
-        <div class="search-box">
-            <input type="text" id="ip-input" placeholder="Wpisz adres IP lub domenę (np. google.com)">
-            <button id="search-btn">Szukaj</button>
+    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 space-y-8">
+
+        <!-- Input Section -->
+        <div class="bg-slate-800 rounded-xl shadow-lg p-6 border border-slate-700">
+            <div class="flex flex-col sm:flex-row gap-4">
+                <input type="text" id="targetInput" placeholder="Enter IP address or Domain (e.g., google.com)"
+                    class="flex-1 bg-slate-900 border border-slate-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-sky-500 text-slate-100 placeholder-slate-500 transition-all">
+                <button id="analyzeBtn" class="bg-sky-600 hover:bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg transition-all disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center min-w-[140px]">
+                    <span id="btnText">Analyze</span>
+                    <svg id="btnLoader" class="animate-spin ml-2 h-5 w-5 text-white hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                    </svg>
+                </button>
+            </div>
+            <p id="errorMsg" class="text-red-400 mt-3 text-sm hidden"></p>
         </div>
 
-        <div id="loading" class="hidden">Ładowanie danych...</div>
-        <div id="error" class="hidden"></div>
+        <!-- Results Container (Hidden initially) -->
+        <div id="results" class="hidden space-y-8">
 
-        <div id="results" class="hidden">
-            <div class="info-grid">
-                <div class="card">
-                    <h3>Adres IP</h3>
-                    <p id="res-ip">-</p>
+            <!-- Top Grid: Network Info & Map -->
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+
+                <!-- Network Info -->
+                <div class="bg-slate-800 rounded-xl shadow-lg border border-slate-700 overflow-hidden">
+                    <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50">
+                        <h2 class="text-lg font-semibold text-sky-400">Network Info</h2>
+                    </div>
+                    <div class="p-6">
+                        <div class="grid grid-cols-1 sm:grid-cols-2 gap-y-4 gap-x-8 text-sm" id="networkInfoGrid">
+                            <!-- Populated by JS -->
+                        </div>
+                    </div>
                 </div>
-                <div class="card">
-                    <h3>Hostname</h3>
-                    <p id="res-hostname">-</p>
-                </div>
-                <div class="card">
-                    <h3>Miasto</h3>
-                    <p id="res-city">-</p>
-                </div>
-                <div class="card">
-                    <h3>Region</h3>
-                    <p id="res-region">-</p>
-                </div>
-                <div class="card">
-                    <h3>Kraj</h3>
-                    <p id="res-country">-</p>
-                </div>
-                <div class="card">
-                    <h3>Dostawca (ISP/Org)</h3>
-                    <p id="res-org">-</p>
-                </div>
-                <div class="card">
-                    <h3>Lokalizacja (Lat, Long)</h3>
-                    <p id="res-loc">-</p>
-                </div>
-                <div class="card">
-                    <h3>Strefa czasowa</h3>
-                    <p id="res-timezone">-</p>
+
+                <!-- Map -->
+                <div class="bg-slate-800 rounded-xl shadow-lg border border-slate-700 overflow-hidden flex flex-col">
+                    <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50">
+                        <h2 class="text-lg font-semibold text-sky-400">Location</h2>
+                    </div>
+                    <div class="relative flex-1 min-h-[300px] bg-slate-900">
+                        <div id="map" class="absolute inset-0 z-0"></div>
+                        <div id="mapOverlay" class="absolute inset-0 z-10 bg-slate-900/80 flex items-center justify-center hidden">
+                            <span class="text-slate-400">Location data unavailable</span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div id="map-container">
-                <div id="map"></div>
+            <!-- Security / Abuse -->
+            <div class="bg-slate-800 rounded-xl shadow-lg border border-slate-700 overflow-hidden">
+                <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50 flex justify-between items-center">
+                    <h2 class="text-lg font-semibold text-sky-400">Security / Abuse Report</h2>
+                    <span id="abuseScoreBadge" class="px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider hidden"></span>
+                </div>
+                <div class="p-6 grid grid-cols-1 md:grid-cols-3 gap-6 text-center" id="abuseInfo">
+                    <!-- Populated by JS -->
+                </div>
             </div>
-            
-            <div class="raw-data">
-                <h3>Surowe dane JSON</h3>
-                <pre id="res-json"></pre>
+
+            <!-- DNS Records -->
+            <div class="space-y-6">
+                <h2 class="text-2xl font-bold text-slate-200">DNS Records</h2>
+                <div id="dnsContainer" class="grid grid-cols-1 gap-6">
+                    <!-- Populated by JS -->
+                </div>
             </div>
+
         </div>
-    </div>
+    </main>
 
-    <!-- Leaflet JS -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
-     crossorigin=""></script>
+    <footer class="border-t border-slate-800 mt-12 py-8 text-center text-slate-500 text-sm">
+        <p>Powered by Cloudflare Workers, IP-API, and AbuseIPDB.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
