--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IP & DNS Analyzer</title>
+    <title>IP</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -45,7 +45,7 @@
     <nav class="border-b border-slate-700 bg-slate-800/50 backdrop-blur-md sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center">
             <h1 class="text-xl font-bold bg-gradient-to-r from-sky-400 to-blue-500 bg-clip-text text-transparent">
-                IP & DNS Analyzer
+                Wyszukiwarka IP
             </h1>
         </div>
     </nav>
@@ -58,7 +58,7 @@
                 <input type="text" id="targetInput" placeholder="Enter IP address or Domain (e.g., google.com)"
                     class="flex-1 bg-slate-900 border border-slate-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-sky-500 text-slate-100 placeholder-slate-500 transition-all">
                 <button id="analyzeBtn" class="bg-sky-600 hover:bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg transition-all disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center min-w-[140px]">
-                    <span id="btnText">Analyze</span>
+                    <span id="btnText">Analizuj</span>
                     <svg id="btnLoader" class="animate-spin ml-2 h-5 w-5 text-white hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                         <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                         <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
@@ -77,7 +77,7 @@
                 <!-- Network Info -->
                 <div class="bg-slate-800 rounded-xl shadow-lg border border-slate-700 overflow-hidden">
                     <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50">
-                        <h2 class="text-lg font-semibold text-sky-400">Network Info</h2>
+                        <h2 class="text-lg font-semibold text-sky-400">Informacje o sieci</h2>
                     </div>
                     <div class="p-6">
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-y-4 gap-x-8 text-sm" id="networkInfoGrid">
@@ -89,12 +89,12 @@
                 <!-- Map -->
                 <div class="bg-slate-800 rounded-xl shadow-lg border border-slate-700 overflow-hidden flex flex-col">
                     <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50">
-                        <h2 class="text-lg font-semibold text-sky-400">Location</h2>
+                        <h2 class="text-lg font-semibold text-sky-400">Lokalizacja</h2>
                     </div>
                     <div class="relative flex-1 min-h-[300px] bg-slate-900">
                         <div id="map" class="absolute inset-0 z-0"></div>
                         <div id="mapOverlay" class="absolute inset-0 z-10 bg-slate-900/80 flex items-center justify-center hidden">
-                            <span class="text-slate-400">Location data unavailable</span>
+                            <span class="text-slate-400">Dane o lokalizacji niedostępne</span>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
             <!-- Security / Abuse -->
             <div class="bg-slate-800 rounded-xl shadow-lg border border-slate-700 overflow-hidden">
                 <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50 flex justify-between items-center">
-                    <h2 class="text-lg font-semibold text-sky-400">Security / Abuse Report</h2>
+                    <h2 class="text-lg font-semibold text-sky-400">AbuseDB Info</h2>
                     <span id="abuseScoreBadge" class="px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider hidden"></span>
                 </div>
                 <div class="p-6 grid grid-cols-1 md:grid-cols-3 gap-6 text-center" id="abuseInfo">
@@ -113,7 +113,7 @@
 
             <!-- DNS Records -->
             <div class="space-y-6">
-                <h2 class="text-2xl font-bold text-slate-200">DNS Records</h2>
+                <h2 class="text-2xl font-bold text-slate-200">Rekordy DNS</h2>
                 <div id="dnsContainer" class="grid grid-cols-1 gap-6">
                     <!-- Populated by JS -->
                 </div>
