--- a/public/index.html
+++ b/public/index.html
@@ -28,92 +28,97 @@
             height: 8px;
         }
         ::-webkit-scrollbar-track {
-            background: #0f172a;
+            background: #09090b;
         }
         ::-webkit-scrollbar-thumb {
-            background: #334155;
+            background: #27272a;
             border-radius: 4px;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: #475569;
+            background: #3f3f46;
+        }
+        .map-tiles {
+            filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
         }
     </style>
 </head>
-<body class="bg-slate-900 text-slate-100 min-h-screen font-sans selection:bg-sky-500 selection:text-white">
+<body class="bg-black text-zinc-100 min-h-screen font-sans selection:bg-sky-500 selection:text-white">
 
     <!-- Navbar -->
-    <nav class="border-b border-slate-700 bg-slate-800/50 backdrop-blur-md sticky top-0 z-50">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center">
-            <h1 class="text-xl font-bold bg-gradient-to-r from-sky-400 to-blue-500 bg-clip-text text-transparent">
-                Wyszukiwarka IP
-            </h1>
-        </div>
-    </nav>
+    <nav class="border-b border-zinc-800 bg-black/50 backdrop-blur-md sticky top-0 z-50">
+        <div class="w-full px-6 h-16 flex items-center justify-center relative">
+            <div class="absolute left-6 top-1/2 -translate-y-1/2 hidden lg:block">
+                <h1 class="text-xl font-bold bg-gradient-to-r from-sky-400 to-blue-500 bg-clip-text text-transparent whitespace-nowrap">
+                    Wyszukiwarka IP
+                </h1>
+            </div>
 
-    <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 space-y-8">
-
-        <!-- Input Section -->
-        <div class="bg-slate-800 rounded-xl shadow-lg p-6 border border-slate-700">
-            <div class="flex flex-col sm:flex-row gap-4">
-                <input type="text" id="targetInput" placeholder="Enter IP address or Domain (e.g., google.com)"
-                    class="flex-1 bg-slate-900 border border-slate-700 rounded-lg px-4 py-3 focus:outline-none focus:ring-2 focus:ring-sky-500 text-slate-100 placeholder-slate-500 transition-all">
-                <button id="analyzeBtn" class="bg-sky-600 hover:bg-sky-500 text-white font-semibold py-3 px-8 rounded-lg transition-all disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center min-w-[140px]">
+            <div class="w-full max-w-2xl flex items-center gap-2">
+                <div class="relative flex-1">
+                    <input type="text" id="targetInput" placeholder="Podaj adres ip lub domenę (np., google.com)"
+                        class="w-full bg-zinc-900 border border-zinc-800 rounded-lg pl-4 pr-4 py-2 focus:outline-none focus:ring-2 focus:ring-sky-500 text-zinc-100 placeholder-zinc-500 transition-all text-sm">
+                </div>
+                <button id="analyzeBtn" class="bg-sky-600 hover:bg-sky-500 text-white font-semibold py-2 px-6 rounded-lg transition-all disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center text-sm whitespace-nowrap">
                     <span id="btnText">Analizuj</span>
-                    <svg id="btnLoader" class="animate-spin ml-2 h-5 w-5 text-white hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                    <svg id="btnLoader" class="animate-spin ml-2 h-4 w-4 text-white hidden" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                         <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
                         <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
                     </svg>
                 </button>
             </div>
-            <p id="errorMsg" class="text-red-400 mt-3 text-sm hidden"></p>
         </div>
+    </nav>
+
+    <main class="container mx-auto px-4 py-6 space-y-6 max-w-[1600px]">
+
+        <p id="errorMsg" class="text-red-400 text-center text-sm hidden bg-red-500/10 border border-red-500/20 p-3 rounded-lg"></p>
 
         <!-- Results Container (Hidden initially) -->
-        <div id="results" class="hidden space-y-8">
+        <div id="results" class="hidden space-y-6">
 
-            <!-- Top Grid: Network Info & Map -->
-            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+            <!-- Top Grid: Network Info, Map, Abuse Info -->
+            <div class="grid grid-cols-1 xl:grid-cols-3 gap-6">
 
                 <!-- Network Info -->
-                <div class="bg-slate-800 rounded-xl shadow-lg border border-slate-700 overflow-hidden">
-                    <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50">
+                <div class="bg-zinc-900 rounded-xl shadow-lg border border-zinc-800 overflow-hidden flex flex-col">
+                    <div class="px-6 py-4 border-b border-zinc-800 bg-zinc-900/50">
                         <h2 class="text-lg font-semibold text-sky-400">Informacje o sieci</h2>
                     </div>
-                    <div class="p-6">
-                        <div class="grid grid-cols-1 sm:grid-cols-2 gap-y-4 gap-x-8 text-sm" id="networkInfoGrid">
+                    <div class="p-6 flex-1">
+                        <div class="grid grid-cols-1 gap-y-4 text-sm" id="networkInfoGrid">
                             <!-- Populated by JS -->
                         </div>
                     </div>
                 </div>
 
                 <!-- Map -->
-                <div class="bg-slate-800 rounded-xl shadow-lg border border-slate-700 overflow-hidden flex flex-col">
-                    <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50">
+                <div class="bg-zinc-900 rounded-xl shadow-lg border border-zinc-800 overflow-hidden flex flex-col min-h-[400px]">
+                    <div class="px-6 py-4 border-b border-zinc-800 bg-zinc-900/50">
                         <h2 class="text-lg font-semibold text-sky-400">Lokalizacja</h2>
                     </div>
-                    <div class="relative flex-1 min-h-[300px] bg-slate-900">
+                    <div class="relative flex-1 bg-zinc-950">
                         <div id="map" class="absolute inset-0 z-0"></div>
-                        <div id="mapOverlay" class="absolute inset-0 z-10 bg-slate-900/80 flex items-center justify-center hidden">
-                            <span class="text-slate-400">Dane o lokalizacji niedostępne</span>
+                        <div id="mapOverlay" class="absolute inset-0 z-10 bg-zinc-900/80 flex items-center justify-center hidden">
+                            <span class="text-zinc-500">Dane o lokalizacji niedostępne</span>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <!-- Security / Abuse -->
-            <div class="bg-slate-800 rounded-xl shadow-lg border border-slate-700 overflow-hidden">
-                <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50 flex justify-between items-center">
-                    <h2 class="text-lg font-semibold text-sky-400">AbuseDB Info</h2>
-                    <span id="abuseScoreBadge" class="px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider hidden"></span>
-                </div>
-                <div class="p-6 grid grid-cols-1 md:grid-cols-3 gap-6 text-center" id="abuseInfo">
-                    <!-- Populated by JS -->
+                <!-- Security / Abuse -->
+                <div class="bg-zinc-900 rounded-xl shadow-lg border border-zinc-800 overflow-hidden flex flex-col">
+                    <div class="px-6 py-4 border-b border-zinc-800 bg-zinc-900/50 flex justify-between items-center">
+                        <h2 class="text-lg font-semibold text-sky-400">AbuseDB Info</h2>
+                        <span id="abuseScoreBadge" class="px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider hidden"></span>
+                    </div>
+                    <div class="p-6 grid grid-cols-1 gap-4 text-center flex-1" id="abuseInfo">
+                        <!-- Populated by JS -->
+                    </div>
                 </div>
             </div>
 
             <!-- DNS Records -->
             <div class="space-y-6">
-                <h2 class="text-2xl font-bold text-slate-200">Rekordy DNS</h2>
+                <h2 class="text-2xl font-bold text-zinc-200">Rekordy DNS</h2>
                 <div id="dnsContainer" class="grid grid-cols-1 gap-6">
                     <!-- Populated by JS -->
                 </div>
@@ -122,7 +127,7 @@
         </div>
     </main>
 
-    <footer class="border-t border-slate-800 mt-12 py-8 text-center text-slate-500 text-sm">
+    <footer class="border-t border-zinc-800 mt-12 py-8 text-center text-zinc-500 text-sm">
         <p>Powered by Cloudflare Workers, IP-API, and AbuseIPDB.</p>
     </footer>
     <script src="script.js"></script>
