--- a/public/index.html
+++ b/public/index.html
@@ -92,8 +92,8 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
 
                     <!-- Card 1: Network & Infrastructure -->
-                    <div class="bg-zinc-900/80 border border-zinc-800 rounded-3xl p-6 flex flex-col gap-6 shadow-xl backdrop-blur-sm">
-                        <div class="flex items-center gap-3 border-b border-zinc-800 pb-4">
+                    <div class="bg-zinc-900/80 border border-zinc-800 rounded-3xl p-6 flex flex-col shadow-xl backdrop-blur-sm">
+                        <div class="flex items-center gap-3 border-b border-zinc-800 pb-4 mb-4">
                             <div class="p-2 bg-sky-500/10 rounded-lg">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-sky-500">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M5.25 14.25h13.5m-13.5 0a3 3 0 0 1-3-3m3 3a3 3 0 1 0 0 6h13.5a3 3 0 1 0 0-6m-16.5-3a3 3 0 0 1 3-3h13.5a3 3 0 0 1 3 3m-19.5 0a4.5 4.5 0 0 1 .9-2.7L5.737 5.1a3.375 3.375 0 0 1 2.7-1.35h7.126c1.062 0 2.062.5 2.7 1.35l2.587 3.45a4.5 4.5 0 0 1 .9 2.7m0 0a3 3 0 0 1-3 3m0 3h.008v.008h-.008v-.008Zm0-6h.008v.008h-.008v-.008Zm-3 6h.008v.008h-.008v-.008Zm0-6h.008v.008h-.008v-.008Z" />
@@ -104,7 +104,7 @@
                         <div id="networkInfoGrid" class="space-y-3">
                             <!-- Populated by JS -->
                         </div>
-                        <div id="infrastructureGrid" class="space-y-3 pt-3 border-t border-zinc-800/50">
+                        <div id="infrastructureGrid" class="space-y-3">
                             <!-- Populated by JS -->
                         </div>
                     </div>
